change all instances of voltage to frequency

--- a/ODMRInterface.ipynb
+++ b/ODMRInterface.ipynb
@@ -312,11 +312,11 @@
     "# Set up a run experiment button. when clicked, experiment will run from start to finish\n",
     "runExperimentButton = Button(label = 'Run Experiment', button_type = 'primary')\n",
     "\n",
-    "# Set up slider for user to set voltage range for piezoelectric\n",
+    "# Set up slider for user to set frequency range for piezoelectric\n",
     "frequencyRangeSlider = Slider(start=2.80, end=2.95, value=2.90, step=0.05, title=\"Frequency Range (GHz)\")\n",
     "frequencyRange = frequencyRangeSlider.value # initialize the variable to store the frequency range\n",
     "\n",
-    "# Set up slider for user to set voltage step for piezoelectric\n",
+    "# Set up slider for user to set frequency step for piezoelectric\n",
     "frequencyStepSlider = Slider(start=250, end=1000, value=1000, step=250, title=\"Frequency Step (Hz)\")\n",
     "\n",
     "# Set up the reset button, to clear the graph of all data\n",
@@ -326,44 +326,44 @@
     "saveDataButton = Button(label=\"Save Data\")\n",
     "\n",
     "AHover = [\n",
-    "    (\"Voltage: \", \"@voltageList\"),\n",
+    "    (\"frequency: \", \"@frequencyList\"),\n",
     "    (\"Counts: \", \"@singleCountsA\")\n",
     "]\n",
     "\n",
     "BHover = [\n",
-    "    (\"Voltage: \", \"@voltageList\"),\n",
+    "    (\"frequency: \", \"@frequencyList\"),\n",
     "    (\"Counts: \", \"@singleCountsB\")\n",
     "]\n",
     "\n",
     "ABHover = [\n",
-    "    (\"Voltage: \", \"@voltageList\"),\n",
+    "    (\"frequency: \", \"@frequencyList\"),\n",
     "    (\"Counts: \", \"@coincidenceCountsAB\")\n",
     "]\n",
     "\n",
     "\n",
     "# Create our 4 plots\n",
     "\n",
-    "coincidenceCountsvsVPlot = figure(plot_height=400, plot_width=800, title=\"Coincidence Counts vs Voltage\",\n",
-    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, voltageRange))\n",
+    "coincidenceCountsvsVPlot = figure(plot_height=400, plot_width=800, title=\"Coincidence Counts vs frequency\",\n",
+    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, frequencyRange))\n",
     "\n",
     "singleCountsAPlot = figure(plot_height=200, plot_width=600, title=\"Single Counts on Port A\",\n",
-    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, voltageRange), tooltips = AHover)\n",
+    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, frequencyRange), tooltips = AHover)\n",
     "\n",
     "singleCountsBPlot = figure(plot_height=200, plot_width=600, title=\"Single Counts on Port B\",\n",
-    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, voltageRange), tooltips = BHover)\n",
+    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, frequencyRange), tooltips = BHover)\n",
     "\n",
     "coincidenceCountsABPlot = figure(plot_height=200, plot_width=600, title=\"Coincidence Counts on Ports A and B\",\n",
-    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, voltageRange), tooltips = ABHover)\n",
+    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, frequencyRange), tooltips = ABHover)\n",
     "\n",
     "# Set y-axis labels for graphs\n",
     "singleCountsAPlot.yaxis.axis_label = \"Counts per \" + str(countingTime) + \" seconds\"\n",
     "singleCountsBPlot.yaxis.axis_label = \"Counts per \" + str(countingTime) + \" seconds\"\n",
     "coincidenceCountsABPlot.yaxis.axis_label = \"Counts per \" + str(countingTime) + \" seconds\"\n",
     "\n",
-    "# Make the x_range of each plot the same as the voltage range value\n",
-    "#singleCountsAPlot.x_range = (0, voltageRange)\n",
-    "#singleCountsBPlot.x_range = (0, voltageRange)\n",
-    "#coincidenceCountsABPlot.x_range = (0, voltageRange)\n",
+    "# Make the x_range of each plot the same as the frequency range value\n",
+    "#singleCountsAPlot.x_range = (0, frequencyRange)\n",
+    "#singleCountsBPlot.x_range = (0, frequencyRange)\n",
+    "#coincidenceCountsABPlot.x_range = (0, frequencyRange)\n",
     "\n",
     "\n",
     "# How many points should be displayed on screen at a time. Can turn this into a user input widget\n",
@@ -387,24 +387,24 @@
     "\n",
     "# Make each point of each plot a circle\n",
     "\n",
-    "coincidenceCountsvsVPlot.circle(x = 'voltageList', y = 'coincidenceCountsAB', \n",
+    "coincidenceCountsvsVPlot.circle(x = 'frequencyList', y = 'coincidenceCountsAB', \n",
     "                                source = source, line_width=3, line_alpha=0.6)\n",
     "\n",
-    "singleCountsAPlot.circle(x = 'voltageList', \n",
+    "singleCountsAPlot.circle(x = 'frequencyList', \n",
     "                         y = 'singleCountsA', \n",
     "                         source = source, \n",
     "                         line_width=3, \n",
     "                         line_alpha=0.6\n",
     "                         )\n",
     "\n",
-    "singleCountsBPlot.circle(x = 'voltageList', \n",
+    "singleCountsBPlot.circle(x = 'frequencyList', \n",
     "                         y = 'singleCountsB', \n",
     "                         source = source, \n",
     "                         line_width=3, \n",
     "                         line_alpha=0.6\n",
     "                         )\n",
     "\n",
-    "coincidenceCountsABPlot.circle(x = 'voltageList', \n",
+    "coincidenceCountsABPlot.circle(x = 'frequencyList', \n",
     "                               y = 'coincidenceCountsAB', \n",
     "                               source = source, \n",
     "                               line_width=3, \n",
@@ -412,24 +412,24 @@
     "                               )\n",
     "\n",
     "# Connect the points of each plot with a line\n",
-    "coincidenceCountsvsVPlot.line(x = 'voltageList', y = 'coincidenceCountsAB', \n",
+    "coincidenceCountsvsVPlot.line(x = 'frequencyList', y = 'coincidenceCountsAB', \n",
     "                                source = source, line_width=3, line_alpha=0.6)\n",
     "\n",
-    "singleCountsAPlot.line(x = 'voltageList', \n",
+    "singleCountsAPlot.line(x = 'frequencyList', \n",
     "                       y = 'singleCountsA', \n",
     "                       source = source, \n",
     "                       line_width=2, \n",
     "                       line_alpha=0.6\n",
     "                       )\n",
     "\n",
-    "singleCountsBPlot.line(x = 'voltageList', \n",
+    "singleCountsBPlot.line(x = 'frequencyList', \n",
     "                       y = 'singleCountsB', \n",
     "                       source = source, \n",
     "                       line_width=2, \n",
     "                       line_alpha=0.6\n",
     "                      )\n",
     "\n",
-    "coincidenceCountsABPlot.line(x = 'voltageList', \n",
+    "coincidenceCountsABPlot.line(x = 'frequencyList', \n",
     "                             y = 'coincidenceCountsAB', \n",
     "                             source = source,\n",
     "                             line_width=2, \n",
@@ -444,13 +444,13 @@
     "\n",
     "numberDataPoints = 0\n",
     "\n",
-    "outputVoltage = 20\n",
+    "outputfrequency = 20\n",
     "\n",
     "totalNumberDataPoints = 0\n",
     "\n",
     "countingTime = 0\n",
-    "voltageRange = 0\n",
-    "voltageStep = 0\n",
+    "frequencyRange = 0\n",
+    "frequencyStep = 0\n",
     "\n",
     "# Define a variable callback_id, which is attached to the periodic_callback function\n",
     "callback_id = None\n",
@@ -469,10 +469,10 @@
     "            \n",
     "        # use the global variable\n",
     "        global countingTime\n",
-    "        global voltageRange\n",
-    "        global voltageStep\n",
+    "        global frequencyRange\n",
+    "        global frequencyStep\n",
     "        global runningTime\n",
-    "        global outputVoltage\n",
+    "        global outputfrequency\n",
     "        \n",
     "        #countingTime = countingTimeSlider.value\n",
     "\n",
@@ -480,19 +480,19 @@
     "        runningTime = runningTime + countingTime\n",
     "        \n",
     "        \n",
-    "        # the board ouput voltage number (0 - 255) is related to the desired output voltage in this way\n",
+    "        # the board ouput frequency number (0 - 255) is related to the desired output frequency in this way\n",
     "        # round to the nearest whole number\n",
-    "        boardOutputVoltage = round((outputVoltage/49.3)/0.016)\n",
+    "        boardOutputfrequency = round((outputfrequency/49.3)/0.016)\n",
     "        \n",
-    "        # send voltage command\n",
-    "        voltageCommand = \"V\" + str(boardOutputVoltage) + \"\\n\"\n",
+    "        # send frequency command\n",
+    "        frequencyCommand = \"V\" + str(boardOutputfrequency) + \"\\n\"\n",
     "        \n",
-    "        s.write(voltageCommand.encode())\n",
+    "        s.write(frequencyCommand.encode())\n",
     "        voltRead = s.readline()\n",
     "        \n",
-    "        # the true output voltage is slightly different from desired output voltage due to rounding\n",
+    "        # the true output frequency is slightly different from desired output frequency due to rounding\n",
     "        # it is based on the number command sent to board\n",
-    "        trueOutputVoltage = boardOutputVoltage*0.016*49.3\n",
+    "        trueOutputfrequency = boardOutputfrequency*0.016*49.3\n",
     "\n",
     "        \n",
     "        # Request data from the CD48 counter\n",
@@ -503,7 +503,7 @@
     "        # append one new data point to each list\n",
     "        new_data = dict(\n",
     "            timeList=[runningTime],\n",
-    "            voltageList = [trueOutputVoltage],\n",
+    "            frequencyList = [trueOutputfrequency],\n",
     "            singleCountsA=[counterData[0]],\n",
     "            singleCountsB=[counterData[1]],\n",
     "            coincidenceCountsAB=[counterData[2]]\n",
@@ -515,8 +515,8 @@
     "        # keep track of how many data points have been plotted\n",
     "        numberDataPoints = numberDataPoints + 1\n",
     "        \n",
-    "        # increase the desired output voltage by the voltage step\n",
-    "        outputVoltage = outputVoltage + voltageStep\n",
+    "        # increase the desired output frequency by the frequency step\n",
+    "        outputfrequency = outputfrequency + frequencyStep\n",
     "    \n",
     "    # else don't add new data\n",
     "    else:\n",
@@ -557,30 +557,30 @@
     "    \n",
     "    global callback_id\n",
     "    global numberDataPoints\n",
-    "    global outputVoltage\n",
+    "    global outputfrequency\n",
     "    global totalNumberDataPoints\n",
     "    global runningTime\n",
     "    \n",
     "    global countingTime\n",
-    "    global voltageRange\n",
-    "    global voltageStep\n",
+    "    global frequencyRange\n",
+    "    global frequencyStep\n",
     "    \n",
     "    \n",
     "    # retrieve slider values\n",
     "    countingTime = countingTimeSlider.value\n",
-    "    voltageRange = voltageRangeSlider.value\n",
-    "    voltageStep = voltageStepSlider.value\n",
+    "    frequencyRange = frequencyRangeSlider.value\n",
+    "    frequencyStep = frequencyStepSlider.value\n",
     "    \n",
-    "    totalNumberDataPoints = int((voltageRange - 20)/voltageStep) + 1\n",
+    "    totalNumberDataPoints = int((frequencyRange - 20)/frequencyStep) + 1\n",
     "    \n",
-    "    # voltage from the board goes from 0 to 4.08 with over command range 0 to 255\n",
-    "    # so you can output voltages at step 0.016V  (0.016 * 255 = 4.08,  0.016*250 = 4)\n",
+    "    # frequency from the board goes from 0 to 4.08 with over command range 0 to 255\n",
+    "    # so you can output frequencys at step 0.016V  (0.016 * 255 = 4.08,  0.016*250 = 4)\n",
     "    \n",
-    "    #boardMaxOutputVoltage = voltageRange / 40\n",
+    "    #boardMaxOutputfrequency = frequencyRange / 40\n",
     "    \n",
     "    numberDataPoints = 0\n",
     "    \n",
-    "    outputVoltage = 20\n",
+    "    outputfrequency = 20\n",
     "    \n",
     "    runningTime = 0\n",
     "    \n",
@@ -598,23 +598,23 @@
     "    # set the running time back to 0\n",
     "    global runningTime\n",
     "    global numberDataPoints\n",
-    "    global outputVoltage\n",
+    "    global outputfrequency\n",
     "    global totalNumberDataPoints\n",
     "    \n",
     "    runningTime = 0\n",
     "    \n",
     "    numberDataPoints = 0\n",
     "\n",
-    "    outputVoltage = 0\n",
+    "    outputfrequency = 0\n",
     "\n",
     "    totalNumberDataPoints = 0\n",
     "    \n",
     "    # empty all data lists in source\n",
     "    source.data = {k: [] for k in source.data}\n",
     "    \n",
-    "    voltageCommand = \"V\" + str(0) + \"\\n\"\n",
+    "    frequencyCommand = \"V\" + str(0) + \"\\n\"\n",
     "        \n",
-    "    s.write(voltageCommand.encode())\n",
+    "    s.write(frequencyCommand.encode())\n",
     "    voltRead = s.readline()\n",
     "    \n",
     "'''\n",
@@ -636,13 +636,13 @@
     "        \n",
     "    \n",
     "# This part doesn't work yet\n",
-    "def change_voltage_range(attr, old, new):\n",
+    "def change_frequency_range(attr, old, new):\n",
     "    \n",
-    "    voltageRange = voltageRangeSlider.value\n",
+    "    frequencyRange = frequencyRangeSlider.value\n",
     "    \n",
-    "    singleCountsAPlot.x_range = Range1d(0, voltageRange)\n",
-    "    singleCountsBPlot.x_range = Range1d(0, voltageRange)\n",
-    "    coincidenceCountsABPlot.x_range = Range1d(0, voltageRange)\n",
+    "    singleCountsAPlot.x_range = Range1d(0, frequencyRange)\n",
+    "    singleCountsBPlot.x_range = Range1d(0, frequencyRange)\n",
+    "    coincidenceCountsABPlot.x_range = Range1d(0, frequencyRange)\n",
     "    \n",
     "    \n",
     "    \n",
@@ -671,8 +671,8 @@
     "# change y axis labels when counting time value changes\n",
     "countingTimeSlider.on_change('value', change_yaxis_labels)\n",
     "\n",
-    "# change voltage range when voltage range value changes\n",
-    "voltageRangeSlider.on_change('value', change_voltage_range)\n",
+    "# change frequency range when frequency range value changes\n",
+    "frequencyRangeSlider.on_change('value', change_frequency_range)\n",
     "\n",
     "\n",
     "# When the save data button is clicked, export the data into a csv file\n",
@@ -683,8 +683,8 @@
     "\n",
     "# create a column of user input widgets\n",
     "userInputWidgets = column(runExperimentButton,\n",
-    "                          voltageRangeSlider,\n",
-    "                          voltageStepSlider,\n",
+    "                          frequencyRangeSlider,\n",
+    "                          frequencyStepSlider,\n",
     "                          countingTimeSlider, \n",
     "                          resetGraphButton,\n",
     "                          saveDataButton#,\n",
