--- a/ODMRInterface.ipynb
+++ b/ODMRInterface.ipynb
@@ -284,6 +284,33 @@
     "\n",
     "# This portion of the code is for running the experiment\n",
     "\n",
+    "\n",
+    "# open serial connection to microwave source\n",
+    "mw = serial.Serial('/dev/cu.usbserial-DA009KJC', baudrate=9600, timeout = 1)\n",
+    "\n",
+    "# set low frequency (in kHz)\n",
+    "mw.write('LF 2800000\\n'.encode())\n",
+    "\n",
+    "# set high frequency (in kHz)\n",
+    "mw.write('HF 2950000\\n'.encode())\n",
+    "\n",
+    "# set attenuation (in dB)\n",
+    "mw.write('AT 0\\n'.encode())\n",
+    "\n",
+    "# set up and down sweep rates (in MHz/s)\n",
+    "mw.write('UR 10\\n'.encode())\n",
+    "mw.write('DR 10\\n'.encode())\n",
+    " \n",
+    "# turn on the microwave source\n",
+    "mw.write('ON 1\\n'.encode())\n",
+    "\n",
+    "# manually sweep the frequency: keep changing the low frequency (when no\n",
+    "# sweep input, the microwave source will go to the low frequency)\n",
+    "lf = 2850000\n",
+    "freq = np.zeros(151)\n",
+    "i = 1\n",
+    "dt = 1\n",
+    "\n",
     "    \n",
     "    \n",
     "# Initialize the data lists, time is the same for all three plots\n",
@@ -326,39 +353,24 @@
     "saveDataButton = Button(label=\"Save Data\")\n",
     "\n",
     "AHover = [\n",
-    "    (\"frequency: \", \"@frequencyList\"),\n",
+    "    (\"Frequency: \", \"@frequencyList\"),\n",
     "    (\"Counts: \", \"@singleCountsA\")\n",
     "]\n",
     "\n",
-    "BHover = [\n",
-    "    (\"frequency: \", \"@frequencyList\"),\n",
-    "    (\"Counts: \", \"@singleCountsB\")\n",
-    "]\n",
     "\n",
-    "ABHover = [\n",
-    "    (\"frequency: \", \"@frequencyList\"),\n",
-    "    (\"Counts: \", \"@coincidenceCountsAB\")\n",
-    "]\n",
     "\n",
     "\n",
     "# Create our 4 plots\n",
     "\n",
-    "coincidenceCountsvsVPlot = figure(plot_height=400, plot_width=800, title=\"Coincidence Counts vs frequency\",\n",
-    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, frequencyRange))\n",
+    "\n",
     "\n",
     "singleCountsAPlot = figure(plot_height=200, plot_width=600, title=\"Single Counts on Port A\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, frequencyRange), tooltips = AHover)\n",
     "\n",
-    "singleCountsBPlot = figure(plot_height=200, plot_width=600, title=\"Single Counts on Port B\",\n",
-    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, frequencyRange), tooltips = BHover)\n",
-    "\n",
-    "coincidenceCountsABPlot = figure(plot_height=200, plot_width=600, title=\"Coincidence Counts on Ports A and B\",\n",
-    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, frequencyRange), tooltips = ABHover)\n",
     "\n",
     "# Set y-axis labels for graphs\n",
     "singleCountsAPlot.yaxis.axis_label = \"Counts per \" + str(countingTime) + \" seconds\"\n",
-    "singleCountsBPlot.yaxis.axis_label = \"Counts per \" + str(countingTime) + \" seconds\"\n",
-    "coincidenceCountsABPlot.yaxis.axis_label = \"Counts per \" + str(countingTime) + \" seconds\"\n",
+    "\n",
     "\n",
     "# Make the x_range of each plot the same as the frequency range value\n",
     "#singleCountsAPlot.x_range = (0, frequencyRange)\n",
@@ -387,9 +399,6 @@
     "\n",
     "# Make each point of each plot a circle\n",
     "\n",
-    "coincidenceCountsvsVPlot.circle(x = 'frequencyList', y = 'coincidenceCountsAB', \n",
-    "                                source = source, line_width=3, line_alpha=0.6)\n",
-    "\n",
     "singleCountsAPlot.circle(x = 'frequencyList', \n",
     "                         y = 'singleCountsA', \n",
     "                         source = source, \n",
@@ -397,24 +406,9 @@
     "                         line_alpha=0.6\n",
     "                         )\n",
     "\n",
-    "singleCountsBPlot.circle(x = 'frequencyList', \n",
-    "                         y = 'singleCountsB', \n",
-    "                         source = source, \n",
-    "                         line_width=3, \n",
-    "                         line_alpha=0.6\n",
-    "                         )\n",
-    "\n",
-    "coincidenceCountsABPlot.circle(x = 'frequencyList', \n",
-    "                               y = 'coincidenceCountsAB', \n",
-    "                               source = source, \n",
-    "                               line_width=3, \n",
-    "                               line_alpha=0.6\n",
-    "                               )\n",
     "\n",
     "# Connect the points of each plot with a line\n",
-    "coincidenceCountsvsVPlot.line(x = 'frequencyList', y = 'coincidenceCountsAB', \n",
-    "                                source = source, line_width=3, line_alpha=0.6)\n",
-    "\n",
+    "'''\n",
     "singleCountsAPlot.line(x = 'frequencyList', \n",
     "                       y = 'singleCountsA', \n",
     "                       source = source, \n",
@@ -435,7 +429,7 @@
     "                             line_width=2, \n",
     "                             line_alpha=0.6\n",
     "                            )\n",
-    "\n",
+    "'''\n",
     "\n",
     "# set global variables to 0\n",
     "\n",
@@ -482,17 +476,17 @@
     "        \n",
     "        # the board ouput frequency number (0 - 255) is related to the desired output frequency in this way\n",
     "        # round to the nearest whole number\n",
-    "        boardOutputfrequency = round((outputfrequency/49.3)/0.016)\n",
+    "        #boardOutputfrequency = round((outputfrequency/49.3)/0.016)\n",
     "        \n",
     "        # send frequency command\n",
-    "        frequencyCommand = \"V\" + str(boardOutputfrequency) + \"\\n\"\n",
+    "        #frequencyCommand = \"V\" + str(boardOutputfrequency) + \"\\n\"\n",
     "        \n",
-    "        s.write(frequencyCommand.encode())\n",
-    "        voltRead = s.readline()\n",
+    "        #s.write(frequencyCommand.encode())\n",
+    "        #voltRead = s.readline()\n",
     "        \n",
     "        # the true output frequency is slightly different from desired output frequency due to rounding\n",
     "        # it is based on the number command sent to board\n",
-    "        trueOutputfrequency = boardOutputfrequency*0.016*49.3\n",
+    "        #trueOutputfrequency = boardOutputfrequency*0.016*49.3\n",
     "\n",
     "        \n",
     "        # Request data from the CD48 counter\n",
@@ -505,8 +499,6 @@
     "            timeList=[runningTime],\n",
     "            frequencyList = [trueOutputfrequency],\n",
     "            singleCountsA=[counterData[0]],\n",
-    "            singleCountsB=[counterData[1]],\n",
-    "            coincidenceCountsAB=[counterData[2]]\n",
     "            )\n",
     "\n",
     "        # Stream the new data to the plots.\n",
