--- a/ODMRInterface.ipynb
+++ b/ODMRInterface.ipynb
@@ -449,6 +449,9 @@
     "# Define a variable callback_id, which is attached to the periodic_callback function\n",
     "callback_id = None\n",
     "\n",
+    "# pause for 12 seconds\n",
+    "time.sleep(12)\n",
+    "\n",
     "\n",
     "# Define a fuction to call when the current document (curdoc) has periodic callback on\n",
     "# This function appends new data to our plots through the stream data command\n",
@@ -459,7 +462,7 @@
     "    \n",
     "    \n",
     "    # add data if total number of data points has not yet been reached\n",
-    "    if numberDataPoints < totalNumberDataPoints:\n",
+    "    if lf < frequencyRange:\n",
     "            \n",
     "        # use the global variable\n",
     "        global countingTime\n",
@@ -468,26 +471,18 @@
     "        global runningTime\n",
     "        global outputfrequency\n",
     "        \n",
-    "        #countingTime = countingTimeSlider.value\n",
+    "        countingTime = countingTimeSlider.value\n",
     "\n",
     "        # add the counting time to our running time\n",
     "        runningTime = runningTime + countingTime\n",
     "        \n",
-    "        \n",
-    "        # the board ouput frequency number (0 - 255) is related to the desired output frequency in this way\n",
-    "        # round to the nearest whole number\n",
-    "        #boardOutputfrequency = round((outputfrequency/49.3)/0.016)\n",
-    "        \n",
-    "        # send frequency command\n",
-    "        #frequencyCommand = \"V\" + str(boardOutputfrequency) + \"\\n\"\n",
-    "        \n",
-    "        #s.write(frequencyCommand.encode())\n",
-    "        #voltRead = s.readline()\n",
-    "        \n",
-    "        # the true output frequency is slightly different from desired output frequency due to rounding\n",
-    "        # it is based on the number command sent to board\n",
-    "        #trueOutputfrequency = boardOutputfrequency*0.016*49.3\n",
+    "        lfstr = str(lf);\n",
+    "        lfstr = 'LF ' + lfstr\n",
+    "        s.write(lfstr.encode())\n",
+    "        freq[i] = lf\n",
     "\n",
+    "        i = i + 1\n",
+    "        lf = lf + frequencyStep\n",
     "        \n",
     "        # Request data from the CD48 counter\n",
     "        s.write(\"c\\n\".encode())\n",
@@ -497,7 +492,7 @@
     "        # append one new data point to each list\n",
     "        new_data = dict(\n",
     "            timeList=[runningTime],\n",
-    "            frequencyList = [trueOutputfrequency],\n",
+    "            frequencyList = [lf],\n",
     "            singleCountsA=[counterData[0]],\n",
     "            )\n",
     "\n",
@@ -505,10 +500,10 @@
     "        source.stream(new_data)\n",
     "\n",
     "        # keep track of how many data points have been plotted\n",
-    "        numberDataPoints = numberDataPoints + 1\n",
+    "        #numberDataPoints = numberDataPoints + 1\n",
     "        \n",
     "        # increase the desired output frequency by the frequency step\n",
-    "        outputfrequency = outputfrequency + frequencyStep\n",
+    "        #outputfrequency = outputfrequency + frequencyStep\n",
     "    \n",
     "    # else don't add new data\n",
     "    else:\n",
@@ -563,16 +558,16 @@
     "    frequencyRange = frequencyRangeSlider.value\n",
     "    frequencyStep = frequencyStepSlider.value\n",
     "    \n",
-    "    totalNumberDataPoints = int((frequencyRange - 20)/frequencyStep) + 1\n",
+    "    #totalNumberDataPoints = int((frequencyRange - 20)/frequencyStep) + 1\n",
     "    \n",
     "    # frequency from the board goes from 0 to 4.08 with over command range 0 to 255\n",
     "    # so you can output frequencys at step 0.016V  (0.016 * 255 = 4.08,  0.016*250 = 4)\n",
     "    \n",
     "    #boardMaxOutputfrequency = frequencyRange / 40\n",
     "    \n",
-    "    numberDataPoints = 0\n",
+    "    #numberDataPoints = 0\n",
     "    \n",
-    "    outputfrequency = 20\n",
+    "    #outputfrequency = 20\n",
     "    \n",
     "    runningTime = 0\n",
     "    \n",
@@ -604,10 +599,10 @@
     "    # empty all data lists in source\n",
     "    source.data = {k: [] for k in source.data}\n",
     "    \n",
-    "    frequencyCommand = \"V\" + str(0) + \"\\n\"\n",
+    "    #frequencyCommand = \"V\" + str(0) + \"\\n\"\n",
     "        \n",
-    "    s.write(frequencyCommand.encode())\n",
-    "    voltRead = s.readline()\n",
+    "    #s.write(frequencyCommand.encode())\n",
+    "    #voltRead = s.readline()\n",
     "    \n",
     "'''\n",
     "def change_callback_period(attr, old, new):\n",
@@ -633,8 +628,6 @@
     "    frequencyRange = frequencyRangeSlider.value\n",
     "    \n",
     "    singleCountsAPlot.x_range = Range1d(0, frequencyRange)\n",
-    "    singleCountsBPlot.x_range = Range1d(0, frequencyRange)\n",
-    "    coincidenceCountsABPlot.x_range = Range1d(0, frequencyRange)\n",
     "    \n",
     "    \n",
     "    \n",
@@ -645,8 +638,6 @@
     "    \n",
     "    # Set y-axis labels for graphs\n",
     "    singleCountsAPlot.yaxis.axis_label = \"Counts per \" + str(float(round(countingTime,1))) + \" seconds\"\n",
-    "    singleCountsBPlot.yaxis.axis_label = \"Counts per \" + str(float(round(countingTime,1))) + \" seconds\"\n",
-    "    coincidenceCountsABPlot.yaxis.axis_label = \"Counts per \" + str(float(round(countingTime,1))) + \" seconds\"\n",
     "    \n",
     "    \n",
     "    \n",
@@ -688,9 +679,7 @@
     "setCountersLayout = layout([[counterInterface]], sizing_mode='scale_both')\n",
     "\n",
     "# create a column with our three plots\n",
-    "plotsColumn = column([coincidenceCountsABPlot,\n",
-    "                      singleCountsAPlot, \n",
-    "                      singleCountsBPlot \n",
+    "plotsColumn = column([singleCountsAPlot\n",
     "                     ])\n",
     "\n",
     "# create a layout for the graphs interface, with the input widgets and the three plots\n",
