--- a/ODMRInterface.ipynb
+++ b/ODMRInterface.ipynb
@@ -6,14 +6,15 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name '__file__' is not defined",
+     "ename": "IndexError",
+     "evalue": "list index out of range",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-e2d5839520d9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m   1166\u001b[0m \u001b[0;31m# When the save data button is clicked, export the data into a csv file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1167\u001b[0m saveDataButton.js_on_click(CustomJS(args=dict(source=source),\n\u001b[0;32m-> 1168\u001b[0;31m                             code=open(join(dirname(__file__), \"download.js\")).read()))\n\u001b[0m\u001b[1;32m   1169\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1170\u001b[0m \u001b[0;31m# When number of points is changed, change follow interval\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name '__file__' is not defined"
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-6f909a61f224>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    160\u001b[0m \u001b[0;31m# run the set_checkboxes function to give the checkboxes proper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    161\u001b[0m \u001b[0;31m# intial values that reflect the current board settings\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 162\u001b[0;31m \u001b[0mset_checkboxes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    163\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    164\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-1-6f909a61f224>\u001b[0m in \u001b[0;36mset_checkboxes\u001b[0;34m()\u001b[0m\n\u001b[1;32m    126\u001b[0m     \u001b[0;31m# add the board settings to the list boardSettings\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    127\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msettings\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 128\u001b[0;31m         \u001b[0mboardSettings\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msettings\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    129\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    130\u001b[0m     \u001b[0;31m# loop through 8 times to glean port settings for each counter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -344,7 +345,7 @@
     "frequencyRange = frequencyRangeSlider.value # initialize the variable to store the frequency range\n",
     "\n",
     "# Set up slider for user to set frequency step for piezoelectric\n",
-    "frequencyStepSlider = Slider(start=250, end=1000, value=1000, step=250, title=\"Frequency Step (Hz)\")\n",
+    "frequencyStepSlider = Slider(start= 0.1, end=2, value=1, step=0.1, title=\"Frequency Step (MHz)\")\n",
     "\n",
     "# Set up the reset button, to clear the graph of all data\n",
     "resetGraphButton = Button(label=\"Reset\")\n",
@@ -365,35 +366,16 @@
     "\n",
     "\n",
     "singleCountsAPlot = figure(plot_height=200, plot_width=600, title=\"Single Counts on Port A\",\n",
-    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (0, frequencyRange), tooltips = AHover)\n",
+    "              tools=\"crosshair,pan,reset,save,wheel_zoom\", x_range = (frequencyRangeSlider.start, frequencyRange), tooltips = AHover)\n",
     "\n",
     "\n",
     "# Set y-axis labels for graphs\n",
     "singleCountsAPlot.yaxis.axis_label = \"Counts per \" + str(countingTime) + \" seconds\"\n",
     "\n",
     "\n",
-    "# Make the x_range of each plot the same as the frequency range value\n",
-    "#singleCountsAPlot.x_range = (0, frequencyRange)\n",
-    "#singleCountsBPlot.x_range = (0, frequencyRange)\n",
-    "#coincidenceCountsABPlot.x_range = (0, frequencyRange)\n",
-    "\n",
     "\n",
     "# How many points should be displayed on screen at a time. Can turn this into a user input widget\n",
     "numberPointsDisplayed = 20\n",
-    "\n",
-    "\n",
-    "# Make the plots display only the most recent \"numberPointsDisplayed\" points\n",
-    "# This way, the graph will scroll to show the newest points\n",
-    "#singleCountsAPlot.x_range.follow = \"end\"\n",
-    "#singleCountsAPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
-    "    \n",
-    "#singleCountsBPlot.x_range.follow = \"end\"\n",
-    "#singleCountsBPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
-    "    \n",
-    "#coincidenceCountsABPlot.x_range.follow = \"end\"\n",
-    "#coincidenceCountsABPlot.x_range.follow_interval = numberPointsDisplayed*countingTime\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "\n",
@@ -408,7 +390,7 @@
     "\n",
     "\n",
     "# Connect the points of each plot with a line\n",
-    "'''\n",
+    "\n",
     "singleCountsAPlot.line(x = 'frequencyList', \n",
     "                       y = 'singleCountsA', \n",
     "                       source = source, \n",
@@ -416,20 +398,7 @@
     "                       line_alpha=0.6\n",
     "                       )\n",
     "\n",
-    "singleCountsBPlot.line(x = 'frequencyList', \n",
-    "                       y = 'singleCountsB', \n",
-    "                       source = source, \n",
-    "                       line_width=2, \n",
-    "                       line_alpha=0.6\n",
-    "                      )\n",
     "\n",
-    "coincidenceCountsABPlot.line(x = 'frequencyList', \n",
-    "                             y = 'coincidenceCountsAB', \n",
-    "                             source = source,\n",
-    "                             line_width=2, \n",
-    "                             line_alpha=0.6\n",
-    "                            )\n",
-    "'''\n",
     "\n",
     "# set global variables to 0\n",
     "\n",
@@ -450,7 +419,7 @@
     "callback_id = None\n",
     "\n",
     "# pause for 12 seconds\n",
-    "time.sleep(12)\n",
+    "#time.sleep(12)\n",
     "\n",
     "\n",
     "# Define a fuction to call when the current document (curdoc) has periodic callback on\n",
@@ -459,14 +428,15 @@
     "    \n",
     "    global numberDataPoints\n",
     "    global totalNumberDataPoints\n",
+    "    global frequencyRange\n",
+    "    global lf\n",
     "    \n",
     "    \n",
     "    # add data if total number of data points has not yet been reached\n",
-    "    if lf < frequencyRange:\n",
+    "    if lf < (frequencyRange * 10**6):\n",
     "            \n",
     "        # use the global variable\n",
     "        global countingTime\n",
-    "        global frequencyRange\n",
     "        global frequencyStep\n",
     "        global runningTime\n",
     "        global outputfrequency\n",
@@ -476,13 +446,12 @@
     "        # add the counting time to our running time\n",
     "        runningTime = runningTime + countingTime\n",
     "        \n",
-    "        lfstr = str(lf);\n",
+    "        lfstr = str(lf)\n",
     "        lfstr = 'LF ' + lfstr\n",
-    "        s.write(lfstr.encode())\n",
-    "        freq[i] = lf\n",
+    "        mw.write(lfstr.encode())\n",
     "\n",
-    "        i = i + 1\n",
-    "        lf = lf + frequencyStep\n",
+    "\n",
+    "        \n",
     "        \n",
     "        # Request data from the CD48 counter\n",
     "        s.write(\"c\\n\".encode())\n",
@@ -492,12 +461,14 @@
     "        # append one new data point to each list\n",
     "        new_data = dict(\n",
     "            timeList=[runningTime],\n",
-    "            frequencyList = [lf],\n",
-    "            singleCountsA=[counterData[0]],\n",
+    "            frequencyList = [lf * 10**(-6)],\n",
+    "            singleCountsA=[counterData[0]]\n",
     "            )\n",
     "\n",
     "        # Stream the new data to the plots.\n",
     "        source.stream(new_data)\n",
+    "        \n",
+    "        lf = lf + frequencyStep * 10**(3)\n",
     "\n",
     "        # keep track of how many data points have been plotted\n",
     "        #numberDataPoints = numberDataPoints + 1\n",
@@ -552,22 +523,15 @@
     "    global frequencyRange\n",
     "    global frequencyStep\n",
     "    \n",
+    "    global lf\n",
+    "    \n",
     "    \n",
     "    # retrieve slider values\n",
     "    countingTime = countingTimeSlider.value\n",
     "    frequencyRange = frequencyRangeSlider.value\n",
     "    frequencyStep = frequencyStepSlider.value\n",
+    "    lf = frequencyRangeSlider.start * 10**6\n",
     "    \n",
-    "    #totalNumberDataPoints = int((frequencyRange - 20)/frequencyStep) + 1\n",
-    "    \n",
-    "    # frequency from the board goes from 0 to 4.08 with over command range 0 to 255\n",
-    "    # so you can output frequencys at step 0.016V  (0.016 * 255 = 4.08,  0.016*250 = 4)\n",
-    "    \n",
-    "    #boardMaxOutputfrequency = frequencyRange / 40\n",
-    "    \n",
-    "    #numberDataPoints = 0\n",
-    "    \n",
-    "    #outputfrequency = 20\n",
     "    \n",
     "    runningTime = 0\n",
     "    \n",
@@ -625,9 +589,11 @@
     "# This part doesn't work yet\n",
     "def change_frequency_range(attr, old, new):\n",
     "    \n",
+    "    global frequencyRange\n",
+    "    \n",
     "    frequencyRange = frequencyRangeSlider.value\n",
     "    \n",
-    "    singleCountsAPlot.x_range = Range1d(0, frequencyRange)\n",
+    "    singleCountsAPlot.x_range = Range1d(frequencyRangeSlider.start, frequencyRange)\n",
     "    \n",
     "    \n",
     "    \n",
@@ -748,7 +714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
